--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "events": "^3.3.0",
+    "leaflet.markercluster": "^1.5.3",
+    "uuid": "^9.0.0",
     "vue": "^3.2.37"
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
+    "@types/geojson": "^7946.0.10",
     "@types/leaflet": "^1.9.0",
+    "@types/leaflet.markercluster": "^1.5.1",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-vue": "^3.0.0",
     "leaflet": "^1.9.2",
     "typescript": "^4.6.4",
